fix: fix vertical alignment of page title, sidebar title and logo

--- a/src/FluentCMS.Web.UI.Components/Components/Page/Page.scss
+++ b/src/FluentCMS.Web.UI.Components/Components/Page/Page.scss
@@ -23,7 +23,7 @@ $page: $prefix + 'page';
         @apply border-gray-200 px-0 py-4 text-gray-700;
 
         &-actions {
-            @apply flex-shrink-0 flex flex-col items-end md:flex-row md:items-center lg:justify-end space-y-3 md:space-y-0 md:space-x-3;
+            @apply flex-shrink-0 flex flex-col items-end md:flex-row pt-1 md:items-center lg:justify-end space-y-3 md:space-y-0 md:space-x-3;
         }
 
         &-body {
@@ -35,7 +35,7 @@ $page: $prefix + 'page';
         }
 
         &-title {
-            @apply text-3xl text-gray-900 dark:text-gray-300;
+            @apply -mt-0.5 text-3xl text-gray-900 dark:text-gray-300;
         }
     }
 }
